<resources>
    <string name="app_name">FBU-Instagram</string>
    <string name="btn_name_en">Login</string>
    <string name="pw_hint_en">password</string>
    <string name="pw_autofill_en">username</string>
    <string name="un_hint_en">username</string>
    <string name="un_autofill_en">enter your username</string>
    <string name="MA_et_hint_en">Description…</string>
    <string name="MA_et_autofill_en">Write a caption!</string>
    <string name="MA_img_desc_en">Your Picture</string>
    <string name="MA_pic_btn_txt_en">Take a Picture</string>
    <string name="MA_sub_btn_txt_en">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_en">Sign Up</string>
    <string name="sign_up_text_en">Don\'t have an account? Sign up!</string>
    <string name="login_text_signin_en">Already have an account? Log in!</string>
    <string name="LIKED_BY">likedBy</string>

</resources>