<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/MA_et_hint_en"
        android:autofillHints="@string/MA_et_autofill_en"
        android:inputType="text" />
    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MA_pic_btn_txt_en"/>
    <ImageView android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/MA_img_desc_en" />
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MA_sub_btn_txt_en"/>

</LinearLayout>