<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/nav_logo_whiteout"
            android:layout_centerHorizontal="true"
            />
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="250dp"
            android:layout_below="@id/ivLogo"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/un_autofill_en"
            android:ems="10"
            android:hint="@string/un_hint_en"
            android:inputType="text" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/etUsername"
            android:layout_centerHorizontal="true"
            android:autofillHints="@string/pw_autofill_en"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:hint="@string/pw_hint_en"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up_en"
            android:backgroundTint="@color/insta_orange"/>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/login_text_signin_en" />
    </RelativeLayout>


</FrameLayout>